fix sidebar list items spacing

--- a/src/App.css
+++ b/src/App.css
@@ -251,20 +251,28 @@ footer {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-around;
-  align-items: flex-start;
+  /* justify-content: space-around; */
+  align-items: center;
+  justify-content: center;
   gap: 0.5rem;
   list-style: none;
   text-transform: capitalize;
 }
 
 .sidebar li {
+  font-size: 0.6rem;
   background-color: rgba(0, 0, 0, 0.1);
   border-radius: 8px;
   text-align: center;
-  flex: 0 1 auto;
+  /* flex: 0 1 0; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
-  padding: 0.5rem 1rem;
+  height: 40px;
+  width: 100px;
+
+  /* padding: 0.5rem 1rem; */
 }
 
 .sidebar li:hover {
@@ -353,6 +361,7 @@ footer {
 
 .card-title {
   margin-top: 1rem;
+  opacity: 0.8;
   min-height: 2rem;
   font-size: 0.8rem;
   display: -webkit-box;
@@ -678,6 +687,10 @@ button {
   nav > ul > a:first-child {
     display: block;
   }
+
+  .sidebar li {
+    font-size: 0.8rem;
+  }
   .home {
     max-width: 90%;
   }
@@ -721,9 +734,12 @@ button {
 
   .sidebar > h5 {
     display: block;
+    color: gray;
   }
 
   .sidebar li {
+    font-size: 1rem;
+    opacity: 0.9;
     background-color: transparent;
   }
 
